# band_physics

./: CMakeLists.txt
acceptance/: CMakeLists.txt  create_table.cpp
backgroundSubtraction/: CMakeLists.txt  basic_subtraction.cpp  testSubtraction.cpp
comparison/: CMakeLists.txt  data_sim_v0.cpp
crossSection/: CMakeLists.txt  compare.py  count_events.cpp  deeps-curve.py
deeps/: CMakeLists.txt  w_plot.cpp
eFiducial/: ElectronFiducial.cpp  ElectronFiducial.h  fiducial_example.C
eventMixing/: CMakeLists.txt  event_mixing.cpp  inclusive_skim.cpp  neutron_skim.cpp
parameters/: time_walk_corr_left.txt  time_walk_corr_right.txt
photonPeak/: CMakeLists.txt  corrected_tof-OLD.cpp  final_photon.cpp  make_ccdb.py  plot_photon_res.py  runbyrun.cpp  single_photon.cpp  single_photon_tdc.cpp
signalBackground/: CMakeLists.txt  S-B.py  signal_background.cpp  spb-noQ2W2cut.txt  spb.txt
signalPlotting/: 2d_reach.cpp  CMakeLists.txt
